--- a/references.bib
+++ b/references.bib
@@ -12,3 +12,12 @@
   year = {2025},
   url = {https://jasp-stats.org/}
 }
+@article{Derks2021_jasp,
+  title={{JASP} for {A}udit: {B}ayesian tools for the auditing practice},
+  author={Derks, Koen and {de Swart}, Jacques and Wagenmakers, {Eric--Jan} and Wille, Jan and Wetzels, Ruud},
+  journal={Journal of Open Source Software},
+  volume={6},
+  number={68},
+  pages={2733},
+  year={2021}
+}
