--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,3 @@
 # Preface {.unnumbered}
 
-The **JASP for Audit User Manual** is a practical guide for auditors who wish to use JASP for Audit [@JASP]. 
+The **JASP for Audit User Manual** is a guide for practitioners who wish to use the Audit module [@Derks2021_jasp] in JASP [@JASP].
