--- a/introduction.qmd
+++ b/introduction.qmd
@@ -1,23 +1,37 @@
 # Getting Started {.unnumbered}
 
-Statistical theory lies at the core of many auditing guidelines and procedures. Auditors therefore need easy-to-use software that implements the required statistical analyses as well as sufficient knowledge to interpret the results of these analyses. JASP is an open-source, free-of-charge, cross-platform statistical software program that facilitates statistical auditing through the Audit module, a downloadable add-on module that is built to support the statistical aspects of an audit. 
+Statistical theory is fundamental to many auditing guidelines and procedures. Auditors need user-friendly software for statistical analyses and the knowledge to interpret these results. JASP\index{JASP} is an open-source, free, cross-platform statistical software that supports statistical auditing through its Audit module.
 
-With the Audit module you, as the auditor, are able to plan, perform and interpret most statistical auditing procedures using the correct statistical methods and without being at risk of making any programming errors. The module is designed with the auditor in mind. This means that the interface is user-friendly and directly relates to audit processes and International Standards on Auditing. Next to the frequentist methods that are standard in the audit practice, the Audit module incorporates Bayesian counterparts of these methods that can improve the transparency and efficiency of your audit. These Bayesian methods allow you to utilize the advantages of knowledge updating by incorporating your existing information. In sum, the Audit performs all the required statistical heavy lifting and enables you to plan, evaluate and interpret your statistical analysis in terms of auditing standards and using state-of-the-art classical and Bayesian techniques. 
+The Audit module allows auditors to plan, perform, and interpret most statistical auditing procedures using correct methods, minimizing programming errors. Designed with auditors in mind, it features a user-friendly interface aligned with audit processes and International Standards on Auditing. Besides standard frequentist methods, the module includes Bayesian methods to enhance audit transparency and efficiency by incorporating existing information. In summary, the Audit module handles the statistical heavy lifting, enabling you to plan, evaluate, and interpret your analyses using both classical and Bayesian techniques.
 
 ## Downloading JASP
 
-The Audit module is a part of JASP, which can be downloaded freely from [www.jasp-stats.org](www.jasp-stats.org). Upon clicking the Download JASP button on the website's home page (@fig-jaspsite) you will be directed to the download page, where you are able to choose your preferred installation. JASP is available for Windows, MacOS, Linux, and Chrome OS. The installation of the software proceeds as you are used to.
+The Audit module is a part of JASP, which can be freely downloaded from [www.jasp-stats.org](www.jasp-stats.org). Click the 'Download JASP' button on the homepage to access the download page and choose your preferred installation. JASP is available for Windows, macOS, Linux, and Chrome OS. Installation follows standard procedures.
 
-![The JASP website](img/jasp-site.png){#fig-jaspsite fig-align="center" width=100%}
+![](img/jasp-site.png){fig-align="center" width=100%}
 
 ## Enabling the Audit module in JASP
 
-Once you open JASP you should see the main menu bar in @fig-menubar at the top of the program.
+After opening JASP, you will see the main menu bar at the top.
 
-![The JASP menu bar](img/menubar.png){#fig-menubar fig-align="center" width=100%}
+![](img/menubar.png){fig-align="center" width=100%}
 
-To locate the Audit, navigate to the modules menu by clicking the \texttt{+} icon to the right of the menu bar. A second menu should pop up from the right side which shows all available modules that JASP has to offer. To make the Audit (in)visible in the main menu bar, click the checkbox next to 'Audit'. The Audit module and its analyses can now be accessed in JASP by clicking the module icon in the menu bar, see @fig-auditmenubar.
+To find the Audit module, click the '+'-icon on the right of the menu bar. A menu will appear showing all available modules. Check the box next to 'Audit' to make it visible in the main menu bar. You can now access the Audit module and its analyses by clicking the module icon in the menu bar.
 
-![The JASP audit menu bar](img/auditmenubar.png){#fig-auditmenubar fig-align="center" width=20%}
+![](img/auditmenubar.png){fig-align="center" width=20%}
 
-You are now ready to perform your statistical audit analyses using the Audit module.
+You are now ready to perform statistical audit analyses using the Audit module.
+
+## Working with the Audit module
+
+The Audit module is a powerful tool for statistical analysis in auditing. The following sections cover its accessibility features, including help files and result validation using the R package jfa.
+
+### Help files
+
+After opening an analysis in the Audit module, click the blue 'i' icon next to the analysis title to access a help file describing its functionality. For some options, like sampling units and algorithms, additional help files are available, indicated by a blue 'i' icon next to the option.
+
+![](img/help.png){fig-align="center" width=100%}
+
+### Validation of statistical results
+
+The Audit module's statistical results are derived from the R package jfa [@jfa]. For complete documentation and benchmarks, visit the package website at [https://koenderks.github.io/jfa/](https://koenderks.github.io/jfa/).
