--- a/chap-workflow.qmd
+++ b/chap-workflow.qmd
@@ -28,13 +28,7 @@ In the evaluation stage, you use the annotated sample to infer the total misstat
 
 The Audit module in JASP offers two ways to navigate the audit sampling workflow: the Sampling Workflow analysis, which guides you through all four stages, and individual analyses for Planning, Selection, and Evaluation. This chapter uses the Sampling Workflow analysis to explain the Audit module's core functionality.
 
-Find the Sampling Workflow analysis in JASP by clicking the Audit module icon and selecting Sampling Workflow. The interface is interactive, reflecting JASP's and JfA's philosophies, with advanced options hidden under the Advanced Options section. Information is progressively disclosed as you move through the workflow.
-
-In the interactive layouts, select the corresponding data and options to plan your audit. Upon completing a stage, request a report by clicking Download Report. Each stage produces output in tables and plots to clarify statistical results.
-
-### Example
-
-Let's explore an example of the audit sampling workflow. To follow along, open the 'Testing for Overstatements' dataset from the JASP Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Testing for Overstatements' (not the green JASP-icon button).
+Let's explore an example of the audit sampling workflow. To follow along, open the 'Testing for Overstatements' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Testing for Overstatements' (not the green JASP-icon button).
 
 ![](img/workflow-1.png){fig-align="center" width=100%}
 
@@ -42,17 +36,28 @@ This will open a dataset with three columns: 'ID', 'bookValue', and 'auditValue'
 
 ![](img/workflow-2.png){fig-align="center" width=100%}
 
-The auditor can start the sampling workflow by clicking on the Audit module icon and then selection 'Sampling Workflow'. Upon clicking this analysis, the following interface appears. In this interface, the auditor will need to fill in the options for the statistical analysis.
+### Stage 1: Planning
 
-![](img/workflow-3.png){fig-align="center" width=100%}
+To start the sampling workflow, click on the Audit module icon and select 'Sampling Workflow'. This will open the following interface, where you need to fill in the options for the statistical analysis.
 
-The first step is to fill in the variable indicating the identifcation numbers of the items in the corresponding box (indicated with a 1). Optionally, if the auditor has access to the book values of the items, they can fill in this variable as well.
+![](img/workflow-3.png){fig-align="center" width=50%}
 
-In order for the Audit module to know what audit question is currently being investigated, you will first be asked to formulate your sampling objectives (indicated with a 2). Enable the 'Performance materiality' objective if you want to test whether the total misstatement in the population exceeds a certain limit (i.e., the performance materiality). This approach allows you to plan a sample such that, when the sample meets your expectations, the maximum error is said to be below performance materiality. Enable the 'Minimum precision' objective if you want to obtain a required minimum precision when estimating the total misstatement in the population. This approach allows you to plan a sample such that, when the sample meets expectations, the uncertainty of your estimate is within a tolerable percentage. In the example, we chooses a performance materiality of 3.5%.
+First, enter the variable indicating the identification numbers of the items in the corresponding box (indicated with a 1). Optionally, if you have access to the book values of the items, you can enter this variable as well.
 
-Next, you need to indicate how many misstatements are tolerable in the sample (indicated with a 3). In the example, we choose to tolerate one full misstatement in the sample.
+Next, formulate your sampling objectives (indicated with a 2). Enable the 'Performance materiality' objective if you want to test whether the total misstatement in the population exceeds a certain limit (i.e., the performance materiality). This approach allows you to plan a sample such that, when the sample meets your expectations, the maximum error is said to be below performance materiality. Enable the 'Minimum precision' objective if you want to obtain a required minimum precision when estimating the total misstatement in the population. This approach allows you to plan a sample such that, when the sample meets expectations, the uncertainty of your estimate is within a tolerable percentage. In the example, we choose a performance materiality of 3.5%.
 
-Furthermore, you need to indicate the risks of material misstatement via the audit risk model (indicated with a 4). According to the Audit Risk Model, the audit risk as a whole can be divided into three constituents: inherent risk, control risk, and detection risk. Inherent risk is the risk posed by an error in a financial statement due to a factor other than a failure of internal controls. Control risk is defined as the probability that a material misstatement is not prevented or detected by the internal control systems of the company (e.g., computer-managed databases). Both these risks are commonly assessed by the auditor on a 3-point scale consisting of the categories low, medium, and high. Detection risk is the probability that an auditor will fail to find material misstatements that exist in an organization's financial statements. For a given level of audit risk, the tolerable level of detection risk bears an inverse relationship to the other two assessed risks. Intuitively, a greater risk of material misstatement should require a lower tolerable detection risk and, accordingly, more persuasive audit evidence. Here, we choose to set all risks to 'High'.
+Then, indicate how many misstatements are tolerable in the sample (indicated with a 3). In the example, we choose to tolerate one full misstatement in the sample.
 
-Finally, you can progress to the selection stage by clicking the button 'To Selection' (indicated with a 5).
+Additionally, indicate the risks of material misstatement via the audit risk model (indicated with a 4). According to the Audit Risk Model, audit risk can be divided into three constituents: inherent risk, control risk, and detection risk. Inherent risk is the risk posed by an error in a financial statement due to a factor other than a failure of internal controls. Control risk is the probability that a material misstatement is not prevented or detected by the internal control systems of the company (e.g., computer-managed databases). Both these risks are commonly assessed by the auditor on a 3-point scale consisting of low, medium, and high categories. Detection risk is the probability that an auditor will fail to find material misstatements in an organization's financial statements. For a given level of audit risk, the tolerable level of detection risk bears an inverse relationship to the other two assessed risks. Intuitively, a greater risk of material misstatement should require a lower tolerable detection risk and, accordingly, more persuasive audit evidence. Here, we choose to set all risks to 'High'.
 
+The output below shows that the required sample size for these options is 134 items.
+
+![](img/workflow-4.png){fig-align="center" width=25%}
+
+Finally, progress to the selection stage by clicking the 'To Selection' button (indicated with a 5).
+
+### Stage 2: Selection
+
+### Stage 3: Execution
+
+### Stage 4: Evaluation
