--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,3 @@
 # Preface {.unnumbered}
 
-The **JASP for Audit User Manual** is a guide for practitioners who wish to use the Audit module [@Derks2021_jasp] in JASP [@JASP].
+The **JASP for Audit User Manual** is the go-to guide for practitioners who wish to work with the Audit module in JASP.
