--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,3 @@
 # Preface {.unnumbered}
 
-The **JASP for Audit User Manual** is the go-to guide for practitioners who wish to work with the Audit module in JASP.
+The **JASP for Audit User Manual** is the go-to guide for practitioners who wish to work with the Audit module in the open-source software JASP.
