--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,3 @@
 # Preface {.unnumbered}
 
-The **JASP for Audit User Manual** is the go-to guide for practitioners who wish to work with the Audit module in the open-source software JASP.
+The **JASP for Audit User Manual** provides detailed instructions and best practices for working with the Audit module in the free and open-source software JASP. It covers various aspects, including data import, analysis techniques, and interpretation of results. The manual is curated by the Statistical Auditing Group at Nyenrode Business University, ensuring that users have access to reliable and up-to-date information.
